--- a/kider-1.0.0/index.html
+++ b/kider-1.0.0/index.html
@@ -97,7 +97,7 @@
                                         class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Learn
                                         More</a>
                                     <a href=""
-                                        class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our
+                                        class="btn btn-light rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our
                                         Classes</a>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                                         class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Learn
                                         More</a>
                                     <a href=""
-                                        class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our
+                                        class="btn btn-light rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our
                                         Classes</a>
                                 </div>
                             </div>
