--- a/kider-1.0.0/facility.html
+++ b/kider-1.0.0/facility.html
@@ -163,7 +163,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Get In Touch</h3>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+45 8168509</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>045 8168509</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
